Updated demo page.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>simplephy Demo</title>
+        <link rel="canvas.css" type="stylesheet" />
     </head>
     <body>
             
@@ -25,7 +26,7 @@
           </p>
           <p>
             Bounce:
-            <input type="checkbox" checked="true" id="bounce" checked/>
+            <input type="checkbox" id="bounce" checked />
           </p>
           <p>
             Collisions:
@@ -33,5 +34,6 @@
           </p>
           <input type="button" onClick="ChangeEnvironment()" value="Update Environment" />
         </form>
+        <script src="old_engine.js"></script>
     </body>
 </html>
